# axon

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
bruno/Axon/: bruno.json  hello.bru  metrics.bru
bruno/Axon/ai/: Sentiment Analysis.bru
bruno/Axon/ai/ask/: What is Roald's full name.bru  When was Roald born.bru  Who does Roald work for.bru  Who is Roald Amundsen.bru
bruno/Axon/environments/: local-k8s.bru
k8s/: axon.yml
observability/: grafana-datasources.yml  otel-collector-config.yaml  prometheus.yml
src/axon/: logging.py  otel.py  routes.py  scraper.py
src/axon/ai/: ask.py  sentiment_analysis.py
src/axon/metrics/: ask.py  instrumentator.py  sentiment_analysis.py
src/axon/request_models/: ask_request.py  semantic_analysis_request.py
