[project]
name = "axon"
version = "0.1.0"
description = ""
authors = [
    {name = "Matt Moore",email = "matt@mattmoore.io"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "transformers (>=4.49.0,<5.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "axon", from = "src"}]

[tool.poetry.scripts]
start = "axon.routes:start"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
